@@ -154,6 +154,8 @@ Version 1.5.6+svn:
      add-on Invasion_from_the_Unknown from the wesnoth-umc-dev
      trunk) each time advancements were evaluated.
    * Improved the drawing routine for the ttext class.
+   * Pressing Escape to exit the game from the title screen now requires a
+     discrete keypress (bug #12747)
 
 Version 1.5.6:
  * Authoring tools:
